# ai-model-gateway

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api.http  example.env
src/: main.rs
src/application/: chat_service.rs  mod.rs
src/config/: config.rs
src/domain/: models.rs
src/infrastructure/: mod.rs  openrouter_client.rs
src/presentation/: handlers.rs
