[package]
name = "ai-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.12.9", features = ["json"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"